# Phraktal

./: CMakeLists.txt  README.md
assets/images/: bullet.xcf  grass.xcf  layers.xcf  stone.xcf  void.xcf
assets/levels/: 1.txt
cmake/: FindSDL2.cmake  FindSDL2_image.cmake
include/: BackgroundEntity.h  Bar.h  Bullet.h  Camera.h  Coin.h  Enemy.h  Engine.h  Entity.h  Grid.h  Log.h  MoveableEntity.h  Player.h  Powerup.h  Text.h  TextureW.h  Timer.h  Utils.h  Vector2.h  bullet.h  camera.h  cleanup.h  enemy.h  grid.h  hudItem.h  level.h  log.h  mimic.h  player.h  quadtree.h  texturew.h  utils.h  vector2.h
include/base/: grid.h  texturew.h  timer.h  utils.h  vector2.h
include/entities/: Bullet.h  Enemy.h  MoveableEntity.h  Player.h  bullet.h  enemy.h  player.h
include/mimics/: bullet.h  enemy.h  mimic.h  player.h
src/: BackgroundEntity.cpp  Bar.cpp  Bullet.cpp  CMakeLists.txt  Camera.cpp  Coin.cpp  Enemy.cpp  Engine.cpp  Entity.cpp  Grid.cpp  MoveableEntity.cpp  Player.cpp  Powerup.cpp  Text.cpp  TextureW.cpp  Timer.cpp  Vector2.cpp  bullet.cpp  camera.cpp  enemy.cpp  grid.cpp  hudItem.cpp  level.cpp  main.cpp  mimic.cpp  player.cpp  sdl.cpp  texturew.cpp  timer.cpp  vector2.cpp
